--- a/index.html
+++ b/index.html
@@ -1,107 +1,161 @@
-<!--index.html-->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TST - TCP-shot-Tunnel</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
+    <style>
+        /* style.css (Modified to include spinner styles) */
+
+        body {
+            background-color: #1a1a1a; /* Fallback background color */
+            margin: 0;
+            font-family: sans-serif;
+            color: #fff;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            padding: 20px;
+            overflow: hidden; /* Prevent scrollbars during loading if spinner is large */
+        }
+
+        body.loaded {
+            background-image: url('./tst-tool1.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center center;
+        }
+
+        /* Loading Spinner Styles */
+        .loading-spinner {
+            border: 8px solid rgba(255, 27, 236, 0.589);
+            border-top: 8px solid #ff00b3; /* Pink loading indicator */
+            border-right: 8px solid #00ffb3; /* Green loading indicator */
+            border-bottom: 8px solid #00b3ff; /* Blue loading indicator */
+            border-left: 8px solid #b300ff; /* Purple loading indicator */
+            border-radius: 50%;
+            width: 80px; /* Adjust size as needed */
+            height: 80px; /* Adjust size as needed */
+            animation: spin 1s linear infinite;
+            position: absolute; /* Center the spinner */
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 10; /* Ensure spinner is on top of other content */
+        }
+
+        @keyframes spin {
+            0% { transform: translate(-50%, -50%) rotate(0deg); }
+            100% { transform: translate(-50%, -50%) rotate(360deg); }
+        }
+
+        /* Initially hide the content, show spinner */
+        .content {
+            opacity: 0;
+            transition: opacity 0.5s ease-in-out;
+        }
+
+        /* When body is loaded, show content, hide spinner (by making it invisible through opacity 0 or display none) */
+        body.loaded .content {
+            opacity: 1;
+        }
+
+        body.loaded .loading-spinner {
+            opacity: 0; /* Fade out spinner */
+            transition: opacity 0.5s ease-in-out; /* Smooth fade out */
+            pointer-events: none; /* Make spinner non-interactive after loading */
+        }
+        /* Alternatively, you could use display: none; for immediate hiding instead of fade out */
+        /* body.loaded .loading-spinner { display: none; } */
+
+
+        h1 {
+            color: #f0f0f0;
+            text-shadow: 2px 2px 10px #ff00b3;
+            font-size: 2.5em;
+            margin-bottom: 0.5em;
+        }
+        .subtitle {
+            color: #ececec;
+            margin-bottom: 1.5em;
+            font-size: 1em;
+        }
+
+        .header-buttons {
+            display: flex;
+            gap: 20px;
+        }
+
+        .button {
+            display: inline-block;
+            padding: 14px 28px;
+            text-decoration: none;
+            color: #fff;
+            border-radius: 8px;
+            font-weight: 600;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            border: none;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .primary-button {
+            background-color: #ff00b3ad;
+        }
+
+        .secondary-button {
+            background-color: #6c54a3c4;
+        }
+
+        .primary-button:hover {
+            background-color: #e0009a;
+            transform: scale(1.05);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
+
+        .secondary-button:hover {
+            background-color: #584589;
+            transform: scale(1.05);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
+
+
+    </style>
 </head>
-<style>
-/* style.css */
-
-body {
-    background-image: url('tst-tool.jpg'); /* Path to background image */
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    margin: 0;
-    font-family: sans-serif;
-    color: #fff; /* Changed default text color to white for better contrast on potentially darker backgrounds */
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 20px;
-    background-color: #1a1a1a; /* Added a dark fallback background color for better image loading experience */
-}
-
-
-h1 {
-    color: #f0f0f0; /* Slightly softer white for heading */
-    text-shadow: 2px 2px 10px #ff00b3; /* Increased text shadow blur and intensity, adjusted color */
-    font-size: 2.5em; /* Slightly larger heading for impact */
-    margin-bottom: 0.5em; /* Reduced margin below heading */
-}
-.subtitle {
-    color: #d0d0d0; /* Softer grey for subtitle */
-    margin-bottom: 2em; /* Increased margin below subtitle for spacing */
-    text-shadow: 1px 1px 2px #333; /* Darker subtitle shadow for better definition */
-    font-size: 1.1em; /* Slightly larger subtitle for readability */
-    font-weight: lighter; /* Lighter font weight for subtitle */
-}
-
-.header-buttons {
-    display: flex;
-    gap: 20px;
-}
-
-.button {
-    display: inline-block;
-    padding: 14px 28px; /* Slightly larger buttons */
-    text-decoration: none;
-    color: #fff; /* White button text */
-    border-radius: 8px; /* More rounded buttons */
-    font-weight: 600; /* Slightly bolder button text */
-    transition: background-color 0.3s ease, transform 0.2s ease; /* Added transform for hover effect */
-    border: none; /* Removed default button border */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Subtle button shadow */
-}
-
-.primary-button {
-    background-color: #ff00b3ad; /* Vibrant pink primary button color */
-}
-
-.secondary-button {
-    background-color: #6c54a3c4; /* Deep purple secondary button color */
-}
-
-.primary-button:hover {
-    background-color: #e0009a; /* Slightly darker pink on hover */
-    transform: scale(1.05); /* Slight scale up on hover */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Increased shadow on hover */
-}
-
-.secondary-button:hover {
-    background-color: #584589; /* Slightly darker purple on hover */
-    transform: scale(1.05); /* Slight scale up on hover */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Increased shadow on hover */
-}
-
-
-/* Optional: Add some subtle animation to the page load */
-body {
-    opacity: 0;
-    animation: fadeIn 1s ease-in-out forwards;
-}
-
-@keyframes fadeIn {
-    to { opacity: 1; }
-}
-</style>
 <body>
 
+    <div class="loading-spinner"></div> <!-- Loading spinner element -->
+
+    <div class="content"> <!-- Wrap your main content -->
         <h1>Welcome to TST - TCP-shot-Tunnel</h1>
         <p class="subtitle">Your simple command-line tool to bridge TCP to HTTP.</p>
 
         <div class="header-buttons">
             <a href="#download" class="button primary-button download-button">Download Now</a>
             <a href="Documentation.html" class="button secondary-button documentation-button">Documentation</a>
+        </div>
+    </div> <!-- End of content wrapper -->
 
 
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const body = document.body;
+        const backgroundImg = new Image();
 
+        backgroundImg.onload = function() {
+            body.classList.add('loaded'); // Add 'loaded' class when image is loaded
+        };
+
+        backgroundImg.onerror = function() {
+            console.error("Error loading background image");
+            body.classList.add('loaded'); // Still load content even if image fails
+        };
+
+        backgroundImg.src = 'tst-tool1.jpg';
+    });
+</script>
 </body>
 </html>
