--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TST - Documentation</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
     <div class="container">
         <nav class="sidebar-nav">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="#documentation-section" class="active">Documentation</a></li>
                 <li><a href="#overview-doc">Overview</a></li>
                 <li><a href="#features-doc">Features</a></li>
