Update documentation link in index.html to remove file extension

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
         <div class="header-buttons">
             <button type="button" id="opendownloadBrowser" class="button primary-button ">Download Now</button>
-            <a href="Documentation.html" class="button secondary-button documentation-button">Documentation</a>
+            <a href="Documentation" class="button secondary-button documentation-button">Documentation</a>
         </div>
     </div> <!-- End of content wrapper -->
 
