--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -12,7 +12,7 @@
             --glass-background: rgba(0, 0, 0, 0.3); /* Darker glass background for a deeper look - Adjusted to 0.3 for slightly more opacity */
             --glass-border: rgba(255, 255, 255, 0.1); /* Light, subtle border for dark glass - White with very low opacity */
             --glass-box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2); /* Darker shadow for dark glass - Increased shadow opacity */
-            --glass-backdrop-filter: blur(12px);           /* Adjusted blur amount - Slightly increased blur for dark glass */
+               /* Adjusted blur amount - Slightly increased blur for dark glass */
             -webkit-backdrop-filter: blur(12px);         /* For Safari compatibility */
 
             /* Color Palette - Adjusted for Dark Glass Theme - Maintaining Pink/Purple Accents */
@@ -55,7 +55,7 @@
             background-size: cover;                      /* Cover the entire body */
             background-repeat: no-repeat;                /* No image repetition */
             background-attachment: fixed;                /* Fixed background for parallax effect */
-            background-position: center center;         /* Center the image */
+            background-position:center bottom ;         /* Center the image */
             background-color: var(--background-dark);   /* Fallback color */
             margin: 0;
             font-family: var(--font-family-base);
